# trie-python-package

./: README.md  clean.sh  pyproject.toml
src/trie/: __init__.py  client.py
src/trie.egg-info/: PKG-INFO  SOURCES.txt
